--- a/Client.Blazor/Pages/_Host.cshtml
+++ b/Client.Blazor/Pages/_Host.cshtml
@@ -18,7 +18,8 @@
 	<link href="css/site.css" rel="stylesheet" />
 
 	<script src="~/scripts/jquery-3.3.1.slim.min.js"></script>
-	<script src="~/scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/scripts/bootstrap.bundle.min.js"></script>
+	<script src="_content/BlazorAnimate/blazorAnimateInterop.js"></script>
 
 	<link href="~/css/register.css" rel="stylesheet" />
 	<script src="~/scripts/register.js"></script>
