--- a/Client.Blazor/Pages/EditProfile.razor
+++ b/Client.Blazor/Pages/EditProfile.razor
@@ -17,7 +17,7 @@
 
                 <div class="col-lg-12">
 					<div class="form-group">
-						<textarea class="form-control" rows="10">
+						<textarea class="form-control" rows="10" readonly>
                             First name: @myUser.FirstName &#10;
                             Last name: @myUser.LastName &#10;
                             Phone: @myUser.Phone. &#10;
