--- a/Client.Blazor/Pages/Index.razor
+++ b/Client.Blazor/Pages/Index.razor
@@ -3,7 +3,7 @@
 @inject HttpClient Http
 @inject Blazored.SessionStorage.ISessionStorageService sessionStorage
 @inject IJSRuntime JSRuntime
-@inherits SiteMapperBase
+@*@inherits SiteMapperBase*@
 @inject NavigationManager NavigationManager
 
 <header class="header">
@@ -49,7 +49,6 @@
 
 @code{
     public bool isLogged = false;
-    public Rent myRent;
     protected async override void OnInitialized()
     {
         try
@@ -60,9 +59,9 @@
                 isLogged = true;
             if (isLogged)
             {
-                LoadCurrentRent()
-            }
-            this.StateHasChanged();
+                LoadCurrentRent();
+                }
+            //this.StateHasChanged();
         }
         catch
         {
@@ -76,7 +75,7 @@
         string URL = "http://localhost:5007/api/rent/GetByIdUser/";
         string URLfin = URL + userId.ToString();
         var result = Http.GetAsync(URLfin);
-        var content = await result.Content.ReadAsAsync<Rent>()
+        //var content = await result.Content.ReadAsAsync<Rent>();
     }
 
     private class Rent
