Update Edit Profile
was an point after phone nr

--- a/Client.Blazor/Pages/EditProfile.razor
+++ b/Client.Blazor/Pages/EditProfile.razor
@@ -20,7 +20,7 @@
 						<textarea class="form-control" rows="10" readonly>
                             First name: @myUser.FirstName &#10;
                             Last name: @myUser.LastName &#10;
-                            Phone: @myUser.Phone. &#10;
+                            Phone: @myUser.Phone &#10;
                             Email: @myUser.Email &#10;
                             Birthday: @myUser.BirthDay &#10;
                             Date of created account: @myUser.DTE_CRE &#10;
