--- a/Client.Blazor/Pages/Scooters.razor
+++ b/Client.Blazor/Pages/Scooters.razor
@@ -7,7 +7,7 @@
 {
     <h1>Available scooters are at: </h1>
     <select @bind="@locationGuidDrop" class="form-control bg-white border-left-0 border-md" placeholder="location">
-        <option value="">Select a item</option>
+        <option value="">Select an item</option>
         @foreach (var adr in allOurLocations)
         {
             <option value="@adr.LocationID">@adr.Comment</option>
@@ -62,6 +62,7 @@ else
     string URLScooters = @"http://localhost:5005/api/scooterinstance/get_all_scooters";
     string URLScooterInstances = @"http://localhost:5005/api/scooterinstance/get_all_scooterinstances";
     private Guid location = Guid.Empty;
+
     public async void GetOurLocations()
     {
         try
@@ -75,10 +76,12 @@ else
         catch
         { }
     }
+
     private async void generateScooters()
     {
         await GetOurScootersGuid(locationGuidDrop);
     }
+
     protected async override void OnInitialized()
     {
 
@@ -103,6 +106,7 @@ else
         }
         catch
         { }
+
         try
         {
             var result = await Http.PostAsJsonAsync<List<Guid>>(URLScooterInstances, allScootersGuid);
@@ -112,6 +116,7 @@ else
         }
         catch
         { }
+
         try
         {
             var result = await Http.PostAsJsonAsync<List<Guid>>(URLScooters, allScootersGuid);
@@ -121,6 +126,8 @@ else
         }
         catch
         { }
+
+        this.StateHasChanged();
 
     }
 
