--- a/Client.Blazor/Pages/Index.razor
+++ b/Client.Blazor/Pages/Index.razor
@@ -70,6 +70,10 @@
     public bool isLogged = false;
     public bool empty = true;
     public Rent myRent = new Rent();
+    public Guid LocationId;
+    public Guid ScooterInstanceID;
+    public string comment = "";
+    public string scooter = "";
 
     protected async override void OnInitialized()
     {
